# scalc

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run_tests.sh
include/: engine.hpp  expression.hpp  functions.hpp  graph.hpp  lexer.hpp  logger.hpp  node.hpp  ops.hpp  types.hpp
src/: engine.cpp  expression.cpp  functions.cpp  graph.cpp  lexer.cpp  main.cpp  node.cpp  ops.cpp
test/: 1_1000.txt  odds.txt  predefined_data.hpp  random_integers_file_generator.py  test_report.txt  test_report.txt.txt  test_sets_generator.py
